[package]
name = "images"
version = "1.0.3"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }

serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
aws-config = "1.5.15"
aws-sdk-s3 = "1.5.15"
url = "2.5.8"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
dotenvy = "0.15.7"
serde_json = "1.0.120"
bytes = "1.11.1"
num_cpus = "1.17.0"

[build-dependencies]
pkg-config = "0.3"
